# mentat

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_config.rs  error.rs  git.rs  lib.rs  main.rs  projects.rs  pty.rs  staging.rs  terminal.rs
src-tauri/src/commands/: claude_config.rs  clipboard.rs  git.rs  mod.rs  projects.rs  prompts.rs  pty.rs  scratches.rs  search.rs  settings.rs  staging.rs  terminal.rs
src-tauri/src/models/: claude_config.rs  filters.rs  git.rs  mod.rs  project.rs  prompt.rs
src-tauri/src/search/: engine.rs
src-tauri/src/store/: file_store.rs  frontmatter.rs  mod.rs
src/components/command-palette/: CommandPalette.tsx
src/components/compose/: ComposeBar.tsx
src/components/editor/: EditorPanel.tsx  EditorToolbar.tsx  MetadataForm.tsx  NeovimEditor.tsx  NewPromptDialog.tsx  PromptEditor.tsx
src/components/layout/: AppLayout.tsx
src/components/mcps/: InstallMcpDialog.tsx  McpOverviewCard.tsx  McpsView.tsx
src/components/projects/: HooksList.tsx  McpServerCard.tsx  ProjectDetail.tsx  ProjectList.tsx  ProjectsView.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: tauri.ts
src/stores/: useClaudeConfigStore.ts  useComposeStore.ts  useFilterStore.ts  useGitStore.ts  useProjectStore.ts  usePromptStore.ts  useScratchStore.ts  useStagingStore.ts  useToastStore.ts  useUIStore.ts
src/types/: claude-config.ts  filters.ts  git.ts  project.ts  prompt.ts
(+31 files in other folders)
