[package]
name = "mentat"
version = "0.1.0"
description = "Developer Prompt Manager"
authors = ["jbro"]
edition = "2021"

[lib]
name = "mentat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mentat"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
thiserror = "2"
dirs = "6"
portable-pty = "0.8"
base64 = "0.22"
tauri-plugin-pty = "0.2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
